# pnfl

./: README.md  pyproject.toml  release-requirements.txt
release/: README.admin.txt  README.coach.txt  README.txt  install.bat
scripts/: build_release.py
src/pnfl/: __init__.py  cli.py
tests/: test_cli.py  test_pipeline.py
