[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnfl"
version = "1.0.1"
description = "Umbrella CLI for PNFL tools."
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pnfl-playcatalog",
    "pnfl-pdbtoexcel",
    "fbpro98-gameplanreader",
    "fbpro98-gameplanwriter",
]

[project.scripts]
pnfl = "pnfl.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
